--- a/GestionCommercial-Desktop/src/com/houarizegai/gestioncommercial/resources/views/FicheClient.fxml
+++ b/GestionCommercial-Desktop/src/com/houarizegai/gestioncommercial/resources/views/FicheClient.fxml
@@ -79,7 +79,7 @@
             </HBox>
          </children>
          <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="10" />
          </padding>
       </VBox>
    </children>
