--- a/GestionCommerciale-Desktop/src/com/houarizegai/gestioncommerciale/resources/views/Home.fxml
+++ b/GestionCommerciale-Desktop/src/com/houarizegai/gestioncommerciale/resources/views/Home.fxml
@@ -13,9 +13,9 @@
    <children>
       <StackPane>
          <children>
-            <ImageView fx:id="imgSlider" fitHeight="300.0" fitWidth="1300.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgSlider" id="slider-img" fitHeight="300.0" fitWidth="1300.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/home/slider/3.png" />
+                  <Image url="@../images/home/slider/0.png" />
                </image>
             </ImageView>
             <VBox maxHeight="-Infinity" maxWidth="-Infinity" spacing="10.0" StackPane.alignment="TOP_LEFT">
@@ -29,7 +29,7 @@
             </VBox>
          </children>
       </StackPane>
-      <HBox alignment="CENTER" spacing="15.0" VBox.vgrow="ALWAYS">
+      <HBox id="cards-container" alignment="CENTER" spacing="15.0" VBox.vgrow="ALWAYS">
          <children>
             <VBox alignment="TOP_CENTER" maxHeight="-Infinity" prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="cards">
                <children>
