--- a/GestionCommerciale-Desktop/src/com/houarizegai/gestioncommerciale/resources/views/System.fxml
+++ b/GestionCommerciale-Desktop/src/com/houarizegai/gestioncommerciale/resources/views/System.fxml
@@ -6,6 +6,7 @@
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
@@ -40,12 +41,16 @@
                   <Insets left="10.0" />
                </padding>
             </StackPane>
-            <AnchorPane VBox.vgrow="ALWAYS">
-               <children>
-                  <StackPane fx:id="holderPane" layoutX="330.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <JFXDrawer fx:id="drawerMenu" defaultDrawerSize="300.0" prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
+            <ScrollPane fx:id="scrollPane" VBox.vgrow="ALWAYS">
+               <content>
+                  <AnchorPane fx:id="paneHeader">
+                     <children>
+                        <StackPane fx:id="holderPane" layoutX="330.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <JFXDrawer fx:id="drawerMenu" defaultDrawerSize="300.0" prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </ScrollPane>
          </children>
       </VBox>
    </children>
